--- a/src/angular.json
+++ b/src/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8e57ffbd-850b-4321-aec1-5061be6e0815"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
