--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost/~/GestionVenta
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/gestionventa
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
