--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://localhost/~/GestionVenta
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
